# blur-my-shell

./: .gitignore  .ts-for-gir.js  LICENSE  Makefile  README.md  idea.md  jsconfig.json  meson.build  metadata.json  todo.md
src/: appfolders.js  applications.js  connections.js  dash.js  dash_to_dock.js  dynamic.js  extension.js  keyboard.js  lockscreen.js  meson.build  metadata.json  other.js  overview.js  paint_signals.js  panel.js  panel_indicator.js  prefs.js  prefs.ui  screenshot.js  settings.js  stylesheet.css  top_panel.js  utilities.js  wal.py  window_list.js
src/components/: appfolders.js  applications.js  applications_drag.js  applications_geometry.js  applications_live_surface.js  coverflow_alt_tab.js  dash_to_dock.js  lockscreen.js  overview.js  panel.js  panel_corner.js  panel_geometry.js  panel_visibility.js  popup.js  screenshot.js  settings_bindings.js  shell.js  shell_blur_surface.js  shell_message_stacks.js  shell_static_corner.js  shell_surface_fade.js  window_list.js
src/conveniences/: blur_creator.js  blur_surface.js  color_effect.js  connections.js  dummy_pipeline.js  easing.js  effects_manager.js  frame_repaint_loop.js  keys.js  live_blur_surface.js  live_pipeline.js  live_window_cache.js  live_window_source.js  paint_signals.js  pattern_matcher.js  pipeline.js  pipelines_manager.js  settings.js  settings_updater.js  shader_uniforms.js  source_effects.js  static_background.js  surface_corner.js  surface_settings.js  utilities.js  utils.js
src/dbus/: client.js  iface.xml  services.js
src/effects/: blur_effect.glsl  blur_effect.js  color.glsl  (+39 more)
(+232 files in other folders)
