install_data(
  [
    'extension.js',
    'prefs.js',
    'stylesheet.css',
  ],
  install_dir : extension_dir,
)

install_subdir('components', install_dir : extension_dir)
install_subdir('conveniences', install_dir : extension_dir)
install_subdir('dbus', install_dir : extension_dir)
install_subdir('effects', install_dir : extension_dir)
install_subdir('preferences', install_dir : extension_dir)
